--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
+    <script src="https://kit.fontawesome.com/e5e5058fb4.js" crossorigin="anonymous"></script>
   <title>AquaLife - Drink Water Reminder</title>
   <meta name="author" content="Yesica Gonzalez">
   <meta name="description"
@@ -24,21 +25,19 @@
       <div class="container">
         <img src="/assets/images/logo.png" alt="AquaLife">
         <nav>
-          <a href="#">Home</a>
-          <a href="#">History</a>
-          <a href="#">Sign Up</a>
-          <a href="#">Register</a>
+          <a href="#"> <i class="fa-solid fa-house"></i>Home</a>
+          <a href="#"> <i class="fa-solid fa-utensils"></i>Recipe</a>
+          <a href="#"> <i class="fa-solid fa-computer-mouse"></i>Sign Up</a>
+          <a href="#"> <i class="fa-solid fa-address-card"></i>Register</a>
         </nav>
       </div>
     </div>
-
     <div id="icon-menu">
-
+      <i class="fa-solid fa-bars"></i>
     </div>
-
   </header>
-
-  <section class="banner container">
+<div class="container-all" id="move-content">
+  <section class="banner">
     <section class="banner_title">
       <h1>AquaLife</h1>
       <p class="text">El agua es fundamental para el correcto <br>
@@ -68,6 +67,7 @@
     <div class="burbuja"></div>
     <div class="burbuja"></div>
   </div>
+</div>
   <script src="archivo.js"></script>
 </body>
 
