--- a/recipe.html
+++ b/recipe.html
@@ -77,7 +77,7 @@
 
     <div id="footer">
         <ul>
-            <li>Copiright - Todos los derechos reservados. AquaLife</li>
+            <li>Copyright - Todos los derechos reservados. AquaLife</li>
         </ul>
     </div>
 </body>
