--- a/pollo-al-curry.html
+++ b/pollo-al-curry.html
@@ -86,7 +86,7 @@
 
     <div id="footer">
         <ul>
-            <li>Copiright - Todos los derechos reservados. AquaLife</li>
+            <li>Copyright - Todos los derechos reservados. AquaLife</li>
         </ul>
     </div>
 </body>
