abrir y cerrar modal

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -97,12 +97,31 @@
 
               <div class="button-row">
                 <div class="button">
-                  <button type="submit" id="send">Calcular</button>
+                  <button type="submit" id="send" class="send">Calcular</button>
                 </div>
               </div>
             </form>
+        </div>
+      </section>
 
-          </div>
+      <section class="modal__calcula">
+        <div class="modal__container">
+          <img src="/assets/images/vaso-img.png" alt="Vaso Sonriente">
+          <h2 class="modal__title">Resultados</h2>
+          <p class="modal__paragrapgh">¡Debes tomar 2.5lts de agua!</p>
+          <p class="modal__paragrapgh">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el único líquido necesario para una hidratación adecuada. Otras bebidas contribuyen a la hidratación diaria gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin cargarlo con elementos innecesarios.</p>
+          <p class="modal__paragrapgh">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a> podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
+          <a href="#" class="modal__close">Cerrar</a>
+        </div>
+      </section>
+      <section class="modal__calcula1">
+        <div class="modal__container">
+          <img src="/assets/images/vaso-img.png" alt="Vaso Sonriente">
+          <h2 class="modal__title">Resultados</h2>
+          <p class="modal__paragrapgh">¡Debes tomar 3lts de agua!</p>
+          <p class="modal__paragrapgh">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el único líquido necesario para una hidratación adecuada. Otras bebidas contribuyen a la hidratación diaria gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin cargarlo con elementos innecesarios.</p>
+          <p class="modal__paragrapgh">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a> podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
+          <a href="#" class="modal__close1">Cerrar</a>
         </div>
       </section>
 
