--- a/recipe.html
+++ b/recipe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -13,73 +13,138 @@
         content="The purpose of this application is to remind people to consume the amount of water necessary to feel hydrated and obtain a healthier life.">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/html" href="style-css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="style_recipe.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div id="main-container">
-        <div id="recetas-section" class="bg-recetas">
-            <div id="logo">
-                <a href="index.html">AquaLife</a>
+
+    <body>
+        <header>
+            <div class="header-container">
+                <div class="logo">
+                    <a href="index.html">AquaLife</a>
+                </div>
+
+                <div class="menu">
+                    <nav>
+                        <ul>
+                            <li class="menu-selected"><a href="index.html" class="text-menu-selected">Inicio</a></li>
+                            <li class="menu-selected"><a href="recipe.html" class="text-menu-selected">Recetas</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <div class="recetas-titulo">
-                <h1>LAS MEJORES</h1>
-                <h3>recetas</h3>
+        </header>
+
+        <div class="titulo-recipe">
+            <h1>Recetas</h1>
+        </div>
+
+        <div class="container-recipe">
+            <div class="card">
+                <div class="circle"></div>
+                <div class="content-recipe">
+                    <h2>Hummus</h2>
+                    <p>La mejor receta de Hummus de Garbanzos ¡Cremosa, sana y deliciosa!<br>
+                        Ideal para desayunos y almuerzos.</p>
+                    <button id="open">Receta</button>
+                </div>
+                <div class="content-image">
+                    <img src="/assets/images/recipes/hummus.png" alt="Hummus de Garbanzos">
+                </div>
+            </div>
+
+
+
+            <div class="card">
+                <div class="circle"></div>
+                <div class="content-recipe1">
+                    <h2>Risotto de Hongos</h2>
+                    <p>La mejor receta de Risotto de Hongos ¡Cremoso y delicioso!<br>
+                        Ideal para almuerzos y cenas.</p>
+                    <a href="#">Receta</a>
+                </div>
+                <div class="content-image1">
+                    <img src="/assets/images/recipes/risotto.png" alt="Risotto de Hongos">
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="circle"></div>
+                <div class="content-recipe2">
+                    <h2>Pollo al Curry</h2>
+                    <p>La mejor receta de Pollo al Curry ¡Deliciosa y abundante!<br>
+                        Ideal para la cena.</p>
+                    <a href="#">Receta</a>
+                </div>
+                <div class="content-image2">
+                    <img src="/assets/images/recipes/pollo.png" alt="Pollo al Curry">
+                </div>
             </div>
         </div>
 
-        <div id="recetas-content">
-            <section>
-                <h2>Recetas mejor guardadas</h2>
+        <section class="recetas-modal">
+            <div class="container-modal">
+                <h2 class="title-modal">Ingredientes:</h2>
+                <ul>
+                    <li>
+                        <span>400gr</span> de garbanzos cocidos
+                    </li>
+                    <li>
+                        <span>70gr</span> de aceite de oliva virgen extra
+                    </li>
+                    <li>
+                        <span>60gr</span> de tahini
+                    </li>
+                    <li>
+                        <span>50ml</span> de agua
+                    </li>
+                    <li>
+                        <span>1</span> diente de ajo
+                    </li>
+                    <li>
+                        <span>5gr</span> de sal (aprox)
+                    </li>
+                    <li>
+                        <span>30gr</span> de zumo de limón
+                    </li>
+                    <li>
+                        <span>5gr</span> de comino
+                    </li>
+                </ul>
+                <h2 class="title-modal">Preparación de Hummus</h2>
+                <p class="paragraph-modal">Lavamos bien los garbanzos para retirar el líquido en el que vienen
+                    sumergidos en la conserva.
+                    Escurrimos e introducimos en el vaso de un robot de cocina. Añadimos el diente de ajo pelado (si
+                    retiramos el germen queda más suave), el sésamo, el comino, la sal, el zumo de limón y el agua.<br>
+                Trituramos hasta obtener una masa semi homogénea antes de incorporar el aceite de oliva virgen extra.
+                    Continuamos triturando unos minutos o hasta obtener una mezcla cremosa. Podemos aportar más
+                    cremosidad al hummus de garbanzos si añadimos un poco de yogur natural. Muchos restaurantes
+                    libaneses lo utilizan y queda estupendo, pero esto es completamente opcional.<br>
+                La consistencia del hummus es algo muy personal, por eso recomendamos ajustar el punto de espesor
+                    añadiendo un poco más de agua y/o aceite hasta obtener el deseado. En el momento de servir rociamos
+                    con un chorrito de aceite de oliva virgen extra, semillas variadas y pimentón dulce. Otros toppings
+                    que podemos añadir son aceitunas o perejil picado. Al gusto.</p>
+                <a href="#" class="close-modal">Cerrar</a>
+            </div>
+        </section>
 
-                <div class="thumbnail">
-                    <div class="image">
-                        <a href="hummus.html"><img src="/assets/images/recipes/hummus.jpg" alt=""></a>
-                    </div>
 
-                    <div class="info">
-                        <div class="title">Hummus de Garbanzos</div>
-                        <div class="type">Snack</div>
-                    </div>
-                </div>
-                <div class="thumbnail">
-                    <div class="image">
-                        <a href="risotto.html"><img src="/assets/images/recipes/risotto.jpg" alt=""></a>
-                    </div>
 
-                    <div class="info">
-                        <div class="title">Risotto de hongos</div>
-                        <div class="type">Cena</div>
-                    </div>
-                </div>
-                <div class="thumbnail">
-                    <div class="image">
-                        <a href="pollo-al-curry.html"><img src="/assets/images/recipes/pollo-al-curry.jpg" alt=""></a>
-                    </div>
-
-                    <div class="info">
-                        <div class="title">Pollo al Curry</div>
-                        <div class="type">Almuerzo</div>
-                    </div>
-                </div>
-            </section>
+        <div class="footer">
+            <ul>
+                <li>Copyright - Todos los derechos reservados. AquaLife</li>
+            </ul>
         </div>
-    </div>
+        <script src="archivo.js"></script>
 
-    <div id="footer">
-        <ul>
-            <li>Copyright - Todos los derechos reservados. AquaLife</li>
-        </ul>
-    </div>
-</body>
+    </body>
 
 </html>
