pagina de recetas

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
               <div class="button-row">
                 <div class="button">
-                  <button type="submit" id="send" class="send">Calcular</button>
+                  <button type="submit" id="send" class="send" onclick="info()">Calcular</button>
                 </div>
               </div>
             </form>
@@ -147,7 +147,7 @@
     <div class="burbuja"></div>
   </div>
 
-  <script src="archivo.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
