--- a/html/index.html
+++ b/html/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0">
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
   <script src="https://kit.fontawesome.com/e5e5058fb4.js" crossorigin="anonymous"></script>
   <title>AquaLife - Drink Water Reminder</title>
   <meta name="author" content="Yesica Gonzalez">
   <meta name="description"
     content="The purpose of this application is to remind people to consume the amount of water necessary to feel hydrated and obtain a healthier life.">
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/html" href="/css/normalize.css">
+  <link rel="stylesheet" type="text/html" href="style-css/normalize.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,20 +23,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
-</head>
+ </head>
 
 <body>
   <header>
     <div class="header-container">
       <div class="logo">
-        <a href="/html/index.html">AquaLife</a>
+        <a href="index.html">AquaLife</a>
       </div>
 
       <div class="menu">
         <nav>
           <ul>
-            <li class="menu-selected"><a href="/html/index.html" class="text-menu-selected">Inicio</a></li>
-            <li class="menu-selected"><a href="/html/recipe.html" class="text-menu-selected">Recetas</a></li>
+            <li class="menu-selected"><a href="index.html" class="text-menu-selected">Inicio</a></li>
+            <li class="menu-selected"><a href="recipe.html" class="text-menu-selected">Recetas</a></li>
           </ul>
         </nav>
       </div>
@@ -108,7 +108,7 @@
           <h2 class="modal__title">Resultados</h2>
           <p class="modal__paragrapgh">¡Debes tomar 2.5lts de agua!</p>
           <p class="modal__paragrapgh">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el único líquido necesario para una hidratación adecuada. Otras bebidas contribuyen a la hidratación diaria gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin cargarlo con elementos innecesarios.</p>
-          <p class="modal__paragrapgh">En nuestra pagina de <a href="/html/recipe.html" class="modal__vinculo">recetas</a> podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
+          <p class="modal__paragrapgh">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a> podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
           <a href="#" class="modal__close">Cerrar</a>
         </div>
       </section>
@@ -118,7 +118,7 @@
           <h2 class="modal__title">Resultados</h2>
           <p class="modal__paragrapgh">¡Debes tomar 3lts de agua!</p>
           <p class="modal__paragrapgh">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el único líquido necesario para una hidratación adecuada. Otras bebidas contribuyen a la hidratación diaria gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin cargarlo con elementos innecesarios.</p>
-          <p class="modal__paragrapgh">En nuestra pagina de <a href="/html/recipe.html" class="modal__vinculo">recetas</a> podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
+          <p class="modal__paragrapgh">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a> podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
           <a href="#" class="modal__close1">Cerrar</a>
         </div>
       </section>
@@ -145,7 +145,7 @@
     <div class="burbuja"></div>
   </div>
 
-  <script src="/js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
