--- a/html/imc.html
+++ b/html/imc.html
@@ -52,11 +52,11 @@
         <div class="form-imc">
             <form action="">
                 <div class="label-imc">
-                    <label for="">Peso: </label>
+                    <label for="">Peso: (expresado en kg) </label>
                     <input id="txtPeso" type="text">
                 </div>
                 <div class="label-imc">
-                    <label for="">Altura: </label>
+                    <label for="">Altura: (expresada en mts) ej: 1.70</label>
                     <input id="txtAltura" type="text">
                 </div>
                 <button class="btn-imc" id="btnCalcular" onclick="clickBtnCalcular()">Calcular IMC</button>
