entrega de proyecto

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
- </head>
+</head>
 
 <body>
   <header>
@@ -100,7 +100,7 @@
                 </div>
               </div>
             </form>
-        </div>
+          </div>
       </section>
 
       <section class="modal__calcula">
@@ -108,8 +108,16 @@
           <img src="/assets/images/vaso-img.png" alt="Vaso Sonriente">
           <h2 class="modal__title">Resultados</h2>
           <p class="modal__paragraph1">¡Debes tomar 2.5lts de agua!</p>
-          <p class="modal__paragraph">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el único líquido necesario para una hidratación adecuada. Otras bebidas contribuyen a la hidratación diaria gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin cargarlo con elementos innecesarios.</p>
-          <p class="modal__paragraph">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a> podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
+          <p class="modal__paragraph">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de
+            caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar
+            a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los
+            alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el
+            único líquido necesario para una hidratación adecuada. Otras bebidas contribuyen a la hidratación diaria
+            gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y
+            eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin
+            cargarlo con elementos innecesarios.</p>
+          <p class="modal__paragraph">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a>
+            podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
           <a href="#" class="modal__close">Cerrar</a>
         </div>
       </section>
@@ -118,8 +126,16 @@
           <img src="/assets/images/vaso-img.png" alt="Vaso Sonriente">
           <h2 class="modal__title">Resultados</h2>
           <p class="modal__paragraph1">¡Debes tomar 3lts de agua!</p>
-          <p class="modal__paragraph">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el único líquido necesario para una hidratación adecuada. Otras bebidas contribuyen a la hidratación diaria gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin cargarlo con elementos innecesarios.</p>
-          <p class="modal__paragraph">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a> podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
+          <p class="modal__paragraph">Normalmente perdemos 3.3lts de agua diariosa. Se necesitan unos 35 minutos de
+            caminata o 17 minutos de trote para quemar 120 kcalorías. Las calorías de las bebidas endulzadas con azúcar
+            a menudo se denominan calorías "sigilosas" porque no le hacen sentir lleno como las calorías de los
+            alimentos. Esto significa que es fácil ingerir calorías adicionales casi sin darse cuenta. El agua es el
+            único líquido necesario para una hidratación adecuada. Otras bebidas contribuyen a la hidratación diaria
+            gracias a su contenido de agua, pero también pueden añadir elementos que su cuerpo tiene que procesar y
+            eliminar como el sodio y los ingredientes artificiales. Bebiendo sólo agua, usted hidrata su cuerpo sin
+            cargarlo con elementos innecesarios.</p>
+          <p class="modal__paragraph">En nuestra pagina de <a href="recipe.html" class="modal__vinculo">recetas</a>
+            podras ver recetas saludables y deliciosas que podrias incorporar a tu dieta diaria.</p>
           <a href="#" class="modal__close1">Cerrar</a>
         </div>
       </section>
@@ -129,7 +145,7 @@
       </div>
     </section>
   </div>
-  
+
   <div class="footer">
     <p>Copyright - Todos los derechos reservados. AquaLife</p>
   </div>
