--- a/html/recipe.html
+++ b/html/recipe.html
@@ -36,7 +36,8 @@
                         </li>
                         <li class="menu-selected"><a href="/html/recipe.html" class="text-menu-selected">Recetas</a>
                         </li>
-                        <li class="menu-selected"><a href="/html/imc.html" class="text-menu-selected">Calcular IMC</a></li>
+                        <li class="menu-selected"><a href="/html/imc.html" class="text-menu-selected">Calcular IMC</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
