--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
   <header>
     <div class="header-container">
       <div class="logo">
-        <a href="index.html">AquaLife</a>
+        <a href="/html/index.html">AquaLife</a>
       </div>
 
       <div class="menu">
