--- a/html/imc.html
+++ b/html/imc.html
@@ -23,6 +23,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 
 <body>
@@ -65,13 +66,6 @@
                 <img src="/assets/images/IMC/imc.png" alt="Indice de Masa Corporal">
             </div>
         </div>
-        <section class="modal__imc">
-            <div class="imc__container">
-                <h2 class="imc__title">Tu índice de masa corporal es:</h2>
-                <div class="imc__paragraph"></div>
-                <a href="#" class="imc__close">Cerrar</a>
-            </div>
-        </section>
     </div>
 
 
