--- a/html/imc.html
+++ b/html/imc.html
@@ -30,13 +30,13 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <a href="index.html">AquaLife</a>
+                <a href="/index.html">AquaLife</a>
             </div>
 
             <div class="menu">
                 <nav>
                     <ul>
-                        <li class="menu-selected"><a href="/html/index.html" class="text-menu-selected">Inicio</a></li>
+                        <li class="menu-selected"><a href="/index.html" class="text-menu-selected">Inicio</a></li>
                         <li class="menu-selected"><a href="/html/recipe.html" class="text-menu-selected">Recetas</a>
                         </li>
                         <li class="menu-selected"><a href="/html/imc.html" class="text-menu-selected">Calcular IMC</a>
